--- a/content/index.njk
+++ b/content/index.njk
@@ -3,26 +3,62 @@ layout: layouts/home.njk
 eleventyNavigation:
   key: Home
   order: 1
-numberOfLatestPostsToShow: 3
+
 ---
-{% set postsCount = collections.posts | length %}
-{% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
-<h1>Latest {{ latestPostsCount }} Post{% if latestPostsCount != 1 %}s{% endif %}</h1>
+<section id="intro">
+<div class="row">
+	<div class="col-sm-2"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid"></div>
+	<div class="col-sm-10">
+<h3>Why the council?</h3>
+<p>The former 2015-2021 National Coordinating Center (NCC) Accreditation Workgroup determined that no current accrediting agency exists that could meet all our needs. In 2021 the NCC Accreditation Workgroup called for the development of an independent agency to provide accreditation. Therefore, the 2021-2025 NCC Accreditation Workgroup and Think College leaders worked to build the infrastructure and operationalize the framework for this Council. The Council will specialize in the accreditation of programs for students with intellectual disability and plans to apply for national recognition of the new agency by 2025.</p>
 
-{% set postslist = collections.posts | head(-1 * numberOfLatestPostsToShow) %}
-{% set postslistCounter = postsCount %}
-{% include "postslist.njk" %}
+<h3>Why is accreditation of programs important? </h3>
 
-{% set morePosts = postsCount - numberOfLatestPostsToShow %}
-{% if morePosts > 0 %}
-<p>{{ morePosts }} more post{% if morePosts != 1 %}s{% endif %} can be found in <a href="/blog/">the archive</a>.</p>
-{% endif %}
+<p>Accreditation offers a way to indicate that a program is meeting basic quality standards in a number of key areas. Accreditation of programs creates quality benchmarks for programs that are useful to the institutions and to students and parents. It provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing high-quality programs. </p>
 
-{# List every content page in the project #}
-{#
-<ul>
-	{%- for entry in collections.all %}
-	<li><a href="{{ entry.url }}"><code>{{ entry.url }}</code></a></li>
-	{%- endfor %}
-</ul>
-#}
+<h3>What do the Program Accreditation Standards address? </h3>
+The Program Accreditation Standards address key areas of quality programs including Student Achievement, Curriculum, and Student Services. <a href="https://thinkcollege.net/sites/default/files/files/TCreport_accred_modelstandards_2021.pdf">You can read more about the Program Standards at ThinkCollege.net</a>.
+
+	</div>
+</div>
+</section>
+<section id="partners">
+	<h3>Partners</h3>
+	<div class="row">
+		<div class="col-sm border text-center">Think College</div>
+	<div class="col-sm border text-center"> National Coordinating Center</div>
+	<div class="col-sm border text-center">NCC Accreditation Workgroup</div> 
+	<div class="col-sm border text-center">Weave</div>
+	</div>
+</section>
+
+<section id="about">
+	<h2>About Us</h2>
+
+<h3>Where are we located? </h3>
+
+<p>We are a virtual office with a registered corporation in Massachusetts.  </p>
+
+<h3>Who should you contact if you have questions?</h3>
+
+<p>Martha Mock, PhD and Executive Director <br>
+<a href="mailto:Email mmock@warner.rochester.edu">Email mmock@warner.rochester.edu</a><br>
+<a href="tel:(585) 276 - 3363">(585)276-3363</a></p>
+</section>
+
+<section id="board">
+	Board Members 
+
+Stephanie Smith Lee, Board President, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID. 
+
+Madeleine C. Will, Vice President,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. 
+
+Tom Sannicandro, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. 
+
+Elise McMillan, JD, Clerk, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.
+
+Who is on the council?
+
+Martha Mock, Ph.D., IHEA Council Executive Director and a Professor at the Warner School of Education and Human Development, at the University of Rochester. She is also the director of the Center on Disability and Education. Mock has worked alongside and on behalf of individuals with disabilities and their families as a teacher, professor and advocate for three decades. Mock is widely known for her work in the area of college options for students with intellectual and developmental disabilities (IDD). She is the chair of the Accreditation Workgroup for the National Coordinating Center at Think College, and is the co-founder of the New York Inclusive Higher Education Coalition, a group of colleges, agencies, and families interested in promoting inclusive higher education throughout New York State.
+
+</section>
