--- a/content/index.njk
+++ b/content/index.njk
@@ -47,15 +47,60 @@ The Program Accreditation Standards address key areas of quality programs includ
 </section>
 
 <section id="board">
-	Board Members 
+	<h2>Board Members </h2>
+<div class="row">
+<div class="col-xs">
+	<div class="card">
+		<img src="..." class="card-img-top" alt="...">
+		<div class="card-body">
+		
+		  <p class="card-text"><strong>Stephanie Smith Lee, Board President</strong>, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID. </p>
+		  
+		</div>
+	  </div>
+</div>
 
-Stephanie Smith Lee, Board President, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID. 
+<div class="col-xs">
+	<div class="card">
+		<img src="..." class="card-img-top" alt="...">
+		<div class="card-body">
+		
+		  <p class="card-text"><strong>Madeleine C. Will, Vice President</strong>,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. </p>
+		  
+		</div>
+	  </div>
+</div>
 
-Madeleine C. Will, Vice President,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. 
+<div class="col-xs">
+	<div class="card">
+		<img src="..." class="card-img-top" alt="...">
+		<div class="card-body">
+		
+		  <p class="card-text"><strong>Tom Sannicandro</strong>, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. </p>
+		  
+		</div>
+	  </div>
+</div>
 
-Tom Sannicandro, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. 
+<div class="col-xs">
+	<div class="card">
+		<img src="..." class="card-img-top" alt="...">
+		<div class="card-body">
+		
+		  <p class="card-text"><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
+		  
+		</div>
+	  </div>
+</div>
+</div>
+</section>
 
-Elise McMillan, JD, Clerk, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.
+
+
+
+
+
+
 
 Who is on the council?
 
