--- a/content/index.njk
+++ b/content/index.njk
@@ -50,60 +50,69 @@ The Program Accreditation Standards address key areas of quality programs includ
 	<h2>Board Members </h2>
 <div class="row">
 <div class="col-xs">
-	<div class="card">
-		<img src="..." class="card-img-top" alt="...">
-		<div class="card-body">
-		
-		  <p class="card-text"><strong>Stephanie Smith Lee, Board President</strong>, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID. </p>
-		  
+	<div class="row">
+		<div class="col-sm-3">
+		<img src="/img/smith.jpg"  alt="Stephanie Smith" class="img-fluid">
+		</div>
+		<div class="col-sm-9">
+		  <p ><strong>Stephanie Smith Lee, Board President</strong>, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID. </p>
 		</div>
 	  </div>
 </div>
-
+<hr>
 <div class="col-xs">
-	<div class="card">
-		<img src="..." class="card-img-top" alt="...">
-		<div class="card-body">
+	<div class="row">
+		<div class="col-sm-3">
+			<img src="/img/will.png"  alt="Madeleine C. Will" class="img-fluid">
+			</div>
+			<div class="col-sm-9">
 		
-		  <p class="card-text"><strong>Madeleine C. Will, Vice President</strong>,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. </p>
-		  
-		</div>
+		  <p><strong>Madeleine C. Will, Vice President</strong>,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. </p>
+	
 	  </div>
 </div>
-
+</div>
+<hr>
 <div class="col-xs">
-	<div class="card">
-		<img src="..." class="card-img-top" alt="...">
-		<div class="card-body">
-		
-		  <p class="card-text"><strong>Tom Sannicandro</strong>, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. </p>
-		  
-		</div>
+	<div class="row">
+		<div class="col-sm-3">
+			<img src="/img/tom.png"  alt="Tom Sannicandro" class="img-fluid">
+			</div>
+			<div class="col-sm-9">
+		  <p><strong>Tom Sannicandro</strong>, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. </p>
 	  </div>
 </div>
-
+</div>
+<hr>
 <div class="col-xs">
-	<div class="card">
-		<img src="..." class="card-img-top" alt="...">
-		<div class="card-body">
-		
-		  <p class="card-text"><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
+	<div class="row">
+		<div class="col-sm-3">
+			<img src="/img/elise.png"  alt="Elise McMillan" class="img-fluid">
+			</div>
+			<div class="col-sm-9">
+		  <p><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
 		  
-		</div>
+		
+	  </div>
+</div>
+<hr>
+</div>
+</div>
+
+<h3>Who is on the council?</h3>
+<div class="row">
+<div class="col-xs">
+	<div class="row">
+		<div class="col-sm-3">
+			<img src="/img/mock.jpg"  alt="Martha Mock" class="img-fluid">
+			</div>
+			<div class="col-sm-9">
+				<p>Martha Mock, Ph.D., IHEA Council Executive Director and a Professor at the Warner School of Education and Human Development, at the University of Rochester. She is also the director of the Center on Disability and Education. Mock has worked alongside and on behalf of individuals with disabilities and their families as a teacher, professor and advocate for three decades. Mock is widely known for her work in the area of college options for students with intellectual and developmental disabilities (IDD). She is the chair of the Accreditation Workgroup for the National Coordinating Center at Think College, and is the co-founder of the New York Inclusive Higher Education Coalition, a group of colleges, agencies, and families interested in promoting inclusive higher education throughout New York State.</p>
+		
 	  </div>
 </div>
 </div>
-</section>
+</div>
 
-
-
-
-
-
-
-
-Who is on the council?
-
-Martha Mock, Ph.D., IHEA Council Executive Director and a Professor at the Warner School of Education and Human Development, at the University of Rochester. She is also the director of the Center on Disability and Education. Mock has worked alongside and on behalf of individuals with disabilities and their families as a teacher, professor and advocate for three decades. Mock is widely known for her work in the area of college options for students with intellectual and developmental disabilities (IDD). She is the chair of the Accreditation Workgroup for the National Coordinating Center at Think College, and is the co-founder of the New York Inclusive Higher Education Coalition, a group of colleges, agencies, and families interested in promoting inclusive higher education throughout New York State.
 
 </section>
