--- a/content/index.njk
+++ b/content/index.njk
@@ -7,7 +7,7 @@ eleventyNavigation:
 ---
 <section id="intro">
 <div class="row">
-	<div class="col-sm-2"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid"></div>
+	<div class="col-sm-2"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid" alt="placeholder"></div>
 	<div class="col-sm-10">
 <h3>Why the council?</h3>
 <p>The former 2015-2021 National Coordinating Center (NCC) Accreditation Workgroup determined that no current accrediting agency exists that could meet all our needs. In 2021 the NCC Accreditation Workgroup called for the development of an independent agency to provide accreditation. Therefore, the 2021-2025 NCC Accreditation Workgroup and Think College leaders worked to build the infrastructure and operationalize the framework for this Council. The Council will specialize in the accreditation of programs for students with intellectual disability and plans to apply for national recognition of the new agency by 2025.</p>
