--- a/content/index.njk
+++ b/content/index.njk
@@ -7,8 +7,8 @@ eleventyNavigation:
 ---
 <section id="intro">
 <div class="row">
-	<div class="col-sm-2"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid" alt="placeholder"></div>
-	<div class="col-sm-10">
+	<div class="col-lg-2"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid" alt="placeholder"></div>
+	<div class="col-lg-10">
 <h3>Why the council?</h3>
 <p>The former 2015-2021 National Coordinating Center (NCC) Accreditation Workgroup determined that no current accrediting agency exists that could meet all our needs. In 2021 the NCC Accreditation Workgroup called for the development of an independent agency to provide accreditation. Therefore, the 2021-2025 NCC Accreditation Workgroup and Think College leaders worked to build the infrastructure and operationalize the framework for this Council. The Council will specialize in the accreditation of programs for students with intellectual disability and plans to apply for national recognition of the new agency by 2025.</p>
 
@@ -25,10 +25,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <section id="partners">
 	<h3>Partners</h3>
 	<div class="row">
-		<div class="col-sm border text-center">Think College</div>
-	<div class="col-sm border text-center"> National Coordinating Center</div>
-	<div class="col-sm border text-center">NCC Accreditation Workgroup</div> 
-	<div class="col-sm border text-center">Weave</div>
+		<div class="col-lg border text-center"><img alt="ICI and Think college" src="/img/thinkcollege.png" class="img-fluid"></div>
+	<div class="col-lg border text-center"> <img alt="National Coordinating Center" src="/img/NCC_logo_300x200.png" class="img-fluid"></div>
+	<div class="col-lg border text-center"><span class="h3"><br>NCC <BR>Accreditation<br> Workgroup</span></div> 
+	<div class="col-lg border text-center"><img src="/img/Weave-Horizontal-Logo-RGB.webp" alt="Weave" class="img"></div>
 	</div>
 </section>
 
@@ -51,10 +51,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <div class="row">
 <div class="col-xs">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-lg-3">
 		<img src="/img/smith.jpg"  alt="Stephanie Smith" class="img-fluid">
 		</div>
-		<div class="col-sm-9">
+		<div class="col-lg-9">
 		  <p ><strong>Stephanie Smith Lee, Board President</strong>, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID. </p>
 		</div>
 	  </div>
@@ -62,10 +62,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <hr>
 <div class="col-xs">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-lg-3">
 			<img src="/img/will.png"  alt="Madeleine C. Will" class="img-fluid">
 			</div>
-			<div class="col-sm-9">
+			<div class="col-lg-9">
 		
 		  <p><strong>Madeleine C. Will, Vice President</strong>,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. </p>
 	
@@ -75,10 +75,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <hr>
 <div class="col-xs">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-lg-3">
 			<img src="/img/tom.png"  alt="Tom Sannicandro" class="img-fluid">
 			</div>
-			<div class="col-sm-9">
+			<div class="col-lg-9">
 		  <p><strong>Tom Sannicandro</strong>, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. </p>
 	  </div>
 </div>
@@ -86,10 +86,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <hr>
 <div class="col-xs">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-lg-3">
 			<img src="/img/elise.png"  alt="Elise McMillan" class="img-fluid">
 			</div>
-			<div class="col-sm-9">
+			<div class="col-lg-9">
 		  <p><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
 		  
 		
@@ -103,10 +103,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <div class="row">
 <div class="col-xs">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-lg-3">
 			<img src="/img/mock.jpg"  alt="Martha Mock" class="img-fluid">
 			</div>
-			<div class="col-sm-9">
+			<div class="col-lg-9">
 				<p>Martha Mock, Ph.D., IHEA Council Executive Director and a Professor at the Warner School of Education and Human Development, at the University of Rochester. She is also the director of the Center on Disability and Education. Mock has worked alongside and on behalf of individuals with disabilities and their families as a teacher, professor and advocate for three decades. Mock is widely known for her work in the area of college options for students with intellectual and developmental disabilities (IDD). She is the chair of the Accreditation Workgroup for the National Coordinating Center at Think College, and is the co-founder of the New York Inclusive Higher Education Coalition, a group of colleges, agencies, and families interested in promoting inclusive higher education throughout New York State.</p>
 		
 	  </div>
