--- a/content/index.njk
+++ b/content/index.njk
@@ -25,10 +25,10 @@ The Program Accreditation Standards address key areas of quality programs includ
 <section id="partners">
 	<h3>Partners</h3>
 	<div class="row">
-		<div class="col-lg border text-center"><img alt="ICI and Think college" src="/img/thinkcollege.png" class="img-fluid"></div>
-	<div class="col-lg border text-center"> <img alt="National Coordinating Center" src="/img/NCC_logo_300x200.png" class="img-fluid"></div>
-	<div class="col-lg border text-center"><span class="h3"><br>NCC <BR>Accreditation<br> Workgroup</span></div> 
-	<div class="col-lg border text-center"><img src="/img/Weave-Horizontal-Logo-RGB.webp" alt="Weave" class="img"></div>
+		<div class="col-lg border text-center"><a href="https://thinkcollege.net"><img alt="ICI and Think college" src="/img/thinkcollege.png" class="img-fluid"></a></div>
+	<div class="col-lg border text-center"> <a href="https://thinkcollege.net/projects/ncc"><img alt="National Coordinating Center" src="/img/NCC_logo_300x200.png" class="img-fluid"></a></div>
+	<div class="col-lg border text-center"><a href="https://thinkcollege.net/projects/ncc/program-accreditation"><span class="h3"><br>NCC <BR>Accreditation<br> Workgroup</span></a></div> 
+	<div class="col-lg border text-center"><a href="https://weaveeducation.com/"><img src="/img/Weave-Horizontal-Logo-RGB.webp" alt="Weave" class="img"></a></div>
 	</div>
 </section>
 
