--- a/content/index.njk
+++ b/content/index.njk
@@ -7,30 +7,23 @@ eleventyNavigation:
 ---
 <section id="intro">
 <div class="row">
-	<div class="col-lg-2"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid" alt="placeholder"></div>
-	<div class="col-lg-10">
-<h3>Why the council?</h3>
+	
+	<div class="col-lg-8">
+<h3>About the Council</h3>
 <p>The former 2015-2021 National Coordinating Center (NCC) Accreditation Workgroup determined that no current accrediting agency exists that could meet all our needs. In 2021 the NCC Accreditation Workgroup called for the development of an independent agency to provide accreditation. Therefore, the 2021-2025 NCC Accreditation Workgroup and Think College leaders worked to build the infrastructure and operationalize the framework for this Council. The Council will specialize in the accreditation of programs for students with intellectual disability and plans to apply for national recognition of the new agency by 2025.</p>
-
-<h3>Why is accreditation of programs important? </h3>
+<hr>
+<h3>Accreditation of programs is important</h3>
 
 <p>Accreditation offers a way to indicate that a program is meeting basic quality standards in a number of key areas. Accreditation of programs creates quality benchmarks for programs that are useful to the institutions and to students and parents. It provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing high-quality programs. </p>
-
-<h3>What do the Program Accreditation Standards address? </h3>
+<hr>
+<h3>About Program Accreditation Standards</h3>
 The Program Accreditation Standards address key areas of quality programs including Student Achievement, Curriculum, and Student Services. <a href="https://thinkcollege.net/sites/default/files/files/TCreport_accred_modelstandards_2021.pdf">You can read more about the Program Standards at ThinkCollege.net</a>.
 
 	</div>
+	<div class="col-lg-4"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid" alt="placeholder"></div>
 </div>
 </section>
-<section id="partners">
-	<h3>Partners</h3>
-	<div class="row">
-		<div class="col-lg border text-center"><a href="https://thinkcollege.net"><img alt="ICI and Think college" src="/img/thinkcollege.png" class="img-fluid"></a></div>
-	<div class="col-lg border text-center"> <a href="https://thinkcollege.net/projects/ncc"><img alt="National Coordinating Center" src="/img/NCC_logo_300x200.png" class="img-fluid"></a></div>
-	<div class="col-lg border text-center"><a href="https://thinkcollege.net/projects/ncc/program-accreditation"><span class="h3"><br>NCC <BR>Accreditation<br> Workgroup</span></a></div> 
-	<div class="col-lg border text-center"><a href="https://weaveeducation.com/"><img src="/img/Weave-Horizontal-Logo-RGB.webp" alt="Weave" class="img"></a></div>
-	</div>
-</section>
+
 
 <section id="about">
 	<h2>About Us</h2>
@@ -113,6 +106,14 @@ The Program Accreditation Standards address key areas of quality programs includ
 </div>
 </div>
 </div>
+</section>
 
-
+<section id="partners">
+	<h3>Partners</h3>
+	<div class="row">
+		<div class="col-lg border text-center"><a href="https://thinkcollege.net"><img alt="ICI and Think college" src="/img/thinkcollege.png" class="img-fluid"></a></div>
+	<div class="col-lg border text-center"> <a href="https://thinkcollege.net/projects/ncc"><img alt="National Coordinating Center" src="/img/NCC_logo_300x200.png" class="img-fluid"></a></div>
+	<div class="col-lg border text-center"><a href="https://thinkcollege.net/projects/ncc/program-accreditation"><span class="h3"><br>NCC <BR>Accreditation<br> Workgroup</span></a></div> 
+	<div class="col-lg border text-center"><a href="https://weaveeducation.com/"><img src="/img/Weave-Horizontal-Logo-RGB.webp" alt="Weave" class="img"></a></div>
+	</div>
 </section>
