--- a/content/index.njk
+++ b/content/index.njk
@@ -6,12 +6,13 @@ eleventyNavigation:
 
 ---
 <section id="intro">
-<div class="row">
-	
-	<div class="col-lg-8">
+
 <h3>About the Council</h3>
 <p>The former 2015-2021 National Coordinating Center (NCC) Accreditation Workgroup determined that no current accrediting agency exists that could meet all our needs. In 2021 the NCC Accreditation Workgroup called for the development of an independent agency to provide accreditation. Therefore, the 2021-2025 NCC Accreditation Workgroup and Think College leaders worked to build the infrastructure and operationalize the framework for this Council. The Council will specialize in the accreditation of programs for students with intellectual disability and plans to apply for national recognition of the new agency by 2025.</p>
 <hr>
+<div class="row">
+	
+	<div class="col-lg-8">
 <h3>Accreditation of programs is important</h3>
 
 <p>Accreditation offers a way to indicate that a program is meeting basic quality standards in a number of key areas. Accreditation of programs creates quality benchmarks for programs that are useful to the institutions and to students and parents. It provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing high-quality programs. </p>
@@ -20,8 +21,35 @@ eleventyNavigation:
 The Program Accreditation Standards address key areas of quality programs including Student Achievement, Curriculum, and Student Services. <a href="https://thinkcollege.net/sites/default/files/files/TCreport_accred_modelstandards_2021.pdf">You can read more about the Program Standards at ThinkCollege.net</a>.
 
 	</div>
-	<div class="col-lg-4"> <img src="https://placehold.co/200x450?text=placeholder" class="img-fluid" alt="placeholder"></div>
+	<div class="col-lg-4"> <div class="card"><div class="card-body">
+		<p class="lead">The IHEA Council is in its earliest days. Reach out to us to learn more or teach us about you. </p> <!-- Button trigger modal -->
+		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
+		  Start the Conversation
+		</button>
+		
+		<!-- Modal -->
+		<div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+			<div class="modal-content">
+			  <div class="modal-header">
+				<h1 class="modal-title fs-5" id="contactModalLabel">Modal title</h1>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			  </div>
+			  <div class="modal-body">
+				...
+			  </div>
+			  <div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	</div>
+ </div>
 </div>
+</div>
+
 </section>
 
 
