--- a/public/css/ici.css
+++ b/public/css/ici.css
@@ -1,4 +1,8 @@
 body {
+
+font-family:"Open Sans","Lato", sans-serif;
+font-size: 16px;
+ 
 	padding: 40px;
 	overflow-x: hidden; /* For Opera */
 	-webkit-box-shadow:
