new form and layouts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,19 @@
-<footer>Footer info</footer>
+<footer><section id="about" >
+
+
+	<div class="container">
+        <div class="row">
+            <div class="col-md-6 column">
+              <h3 class="h5">Location</h3>
+             <p>We are a virtual office with a registered corporation in Massachusetts.  </p>
+            </div>
+            <div class="col-md-6 column">
+              <h3 class="h5">Contact</h3>
+            
+                <p>Martha Mock, PhD and Executive Director <br>
+                <a href="mailto:Email mmock@warner.rochester.edu">Email mmock@warner.rochester.edu</a><br>
+                <a href="tel:(585) 276 - 3363">(585)276-3363</a></p>
+            </div>
+          </div>
+	</div>
+</section></footer>
