--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,30 @@
 <header>
+    <div class="container">
 
-    {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
-    <nav>
-        <h2 class="visually-hidden">Top level navigation menu</h2>
-        <ul class="nav">
-       
-        </ul>
-    </nav>
     <div class="row">
-        <div class="col-sm-4"><img src="/img/IHEA.jpg" alt="Inclusive Higher Education Accreditation" class="img-fluid"> </div>
-        <div class="col-sm-6 offset-sm-2"><h2 class="h3 fade-in-text">The <span class="highlight">Inclusive Higher Education Council</span> is an accrediting agency for college and university programs for students with intellectual disability.</h2>
+        <div class="col-sm-5"><a href="/"><img src="/img/IHEA.jpg" alt="Inclusive Higher Education Accreditation" class="img-fluid"></a>
+            <div class="float-end">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="/">Home</a>
+                      <a class="nav-link" href="#board">Board & Council</a>
+                      <a class="nav-link" href="#partners">Partners</a>
+
+
+                    </div>
+                  </div>
+                </div>
+              </nav>
+            </div>
+         </div>
+        <div class="col-sm-6 offset-sm-1"><h2 class="h3 fade-in-text">The <span class="highlight">Inclusive Higher Education Council</span> is an accrediting agency for college and university programs for students with intellectual disability.</h2>
         </div>
       </div>
+    </div>
 </header>
