--- a/public/css/ici.css
+++ b/public/css/ici.css
@@ -1,9 +1,8 @@
 body {
-
 font-family:"Open Sans","Lato", sans-serif;
 font-size: 16px;
- 
-	padding: 40px;
+	padding: 26px;
+  padding-top: 3em;
 	overflow-x: hidden; /* For Opera */
 	-webkit-box-shadow:
         inset #1D537D 0 0 0 5px,
@@ -35,6 +34,12 @@ font-size: 16px;
         
 }
 body {min-height: 100%;}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
 header h2.h3 {color: grey;
 }
 .fade-in-text {
@@ -91,8 +96,35 @@ header h2.h3 {color: grey;
       background-position: 0 0;
     }
   }
-  header {border-bottom: #86A27C 1px solid;}
-  main {padding-top: 3em;}
-  section {margin-bottom: 3em;}
-
+  
+  main {padding-top: 1.5em;}
+  section {padding-top: 1em; padding-bottom: 3em; margin-bottom: 5em; border-top: 2px solid transparent;
+    border-image: linear-gradient(0.25turn, rgba(205, 109, 39, 0), #86A27C, rgba(56,2,155,0));
+    border-image-slice: 1;
+    width:100%;} 
+    main :is(h1, h2, h3, h4, h5, h6) {letter-spacing: .17rem;}
   #board img {max-width: 200px;}
+
+  .btn-primary {background-color: #1D537D; font-weight: bold;}
+  .call_out {
+    background: linear-gradient(white, white) padding-box,
+                linear-gradient(to right, #CD6D27, #86A27C) border-box;
+    border-radius: 1em;
+    border: 4px solid transparent;
+  }
+
+  .alt_bg {background-color: #F7F7F8}
+ 
+  footer {background-color: #86A27C; color:white;}
+  footer a {color: white;}
+  #partners img {max-width: 250px; margin: 1em;}
+
+  @media (min-width: 767.98px) {
+  .bg-body-tertiary {
+    background-color: transparent !important;
+    padding-left: 3em;
+    margin-top: -3em;
+    font-weight: bold;
+  }
+}
+  .bg-body-tertiary:is(a) {color:#1D537D;}
