--- a/content/index.njk
+++ b/content/index.njk
@@ -33,25 +33,25 @@ The Program Accreditation Standards address key areas of quality programs includ
 		  <div class="modal-dialog">
 			<div class="modal-content">
 			  <div class="modal-header">
-				<h1 class="modal-title fs-5" id="contactModalLabel">Modal title</h1>
+				<h1 class="modal-title fs-5" id="contactModalLabel">Contact Us</h1>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			  </div>
 			  <div class="modal-body">
 				<form name="contact" method="POST" data-netlify="true">
 					<p>
-					  <label>Your Name: <input type="text" name="name" /></label>
+					  <label class="form-label">Your Name: <input type="text" name="name" class="form-control" /></label>
 					</p>
 					<p>
-					  <label>Your Email: <input type="email" name="email" /></label>
+					  <label class="form-label">Your Email: <input type="email" name="email" class="form-control" /></label>
 					</p>
 					<p>
-						<label>Job Title: <input type="text" name="title" /></label>
+						<label class="form-label">Job Title: <input type="text" name="title" class="form-control" /></label>
 					</p>
 					<p>
-					  <label>Message: <textarea name="message"></textarea></label>
+					  <label class="form-label">Message: <textarea name="message" class="form-control" ></textarea></label>
 					</p>
 					<p>
-					  <button type="submit">Send</button>
+					  <button type="submit" btn btn-primary>Send</button>
 					</p>
 				  </form>
 				  
