--- a/content/index.njk
+++ b/content/index.njk
@@ -76,17 +76,18 @@ The Program Accreditation Standards address key areas of quality programs includ
 	<div class="row row-cols-1 row-cols-md-2 g-4">
 	  <div class="col pb-3">
 		<div class="card h-100  ">
-		  <img src="/img/smith.jpg" class="card-img-top mx-auto" alt="Stephanie Smith">
+		  
 		  <div class="card-body">
-			
+			<img src="/img/smith.jpg" class="float-start p-3" alt="Stephanie Smith">
 			<p class="card-text"><strong>Stephanie Smith Lee, Board President</strong>, is a senior policy advisor with over 30 years of public policy expertise, including senior Congressional staff positions. Since her daughter, Laura, was born with Down syndrome in 1982, she has led successful disability advocacy efforts at the local, state, and Federal levels. As the Director of the US Office of Special Education Programs, she was responsible for the implementation of IDEA, the federal special education law. As Co-Chair of the Inclusive Higher Education Committee, she led the successful effort to obtain federal financial aid and authorize model programs for postsecondary students with ID.</p>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col pb-3">
 		<div class="card h-100 py-2">
-		  <img src="/img/will.png" class="card-img-top mx-auto pb-5" alt="Madeleine C. Will">
+		  
 		  <div class="card-body">
+			<img src="/img/will.png" class="float-start p-3" alt="Madeleine C. Will">
 			<p class="card-text"><strong>Madeleine C. Will, Vice President</strong>,  is a policy expert and advisor. Madeleine has more than 35 years  of experience successfully advocating for individuals with intellectual disabilities and their families. Since her adult son, Jonathan, was born with Down syndrome, she has led successful disability policy efforts at the local, state, and federal levels. She served as the Assistant Secretary of the Office of Special Education and Rehabilitative Services under President Reagan. In 2007, Madeleine founded the Collaboration to Promote Self-Determination. </p>
 		  </div>
 		</div>
@@ -95,16 +96,16 @@ The Program Accreditation Standards address key areas of quality programs includ
 	<div class="row row-cols-1 row-cols-md-2 g-4">
 	  <div class="col pb-3">
 		<div class="card h-100 py-2">
-		  <img src="/img/tom.png" class="card-img-top mx-auto" alt="Tom Sannicandro">
 		  <div class="card-body">
-			<p class="card-text"><strong>Tom Sannicandro</strong>, JD, PhD, Treasurer,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. </p>
+			<img src="/img/tom.png" class="float-start p-3" alt="Tom Sannicandro">
+			<p class="card-text"><strong>Tom Sannicandro, JD, PhD, Treasurer</strong>,  has been practicing law for over 20 years in the areas of disability and special education law, and estate planning. He was formerly the Director of the Institute for Community Inclusion. Tom served in the Massachusetts legislature for 12 years where he authored a number of groundbreaking laws that empower people with disabilities. </p>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col pb-3">
 		<div class="card h-100 py-2">
-		  <img src="/img/elise.png" class="card-img-top mx-auto" alt="Elise McMillan">
 		  <div class="card-body">
+			<img src="/img/elise.png" class="float-start p-3" alt="Elise McMillan">
 			<p class="card-text"><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
 		  </div>
 		</div>
@@ -113,9 +114,8 @@ The Program Accreditation Standards address key areas of quality programs includ
 	<div class="row col-lg-8 mx-auto">
 		<div class="col pb-3">
 		  <div class="card h-100 py-2">
-			<img src="/img/mock.jpg" class="card-img-top mx-auto" alt="Martha Mock">
 			<div class="card-body">
-			  
+			  <img src="/img/mock.jpg" class="float-start p-3" alt="Martha Mock">
 			  <p class="card-text"><strong>Martha Mock, Ph.D., IHEA Council Executive Director</strong> and a Professor at the Warner School of Education and Human Development, at the University of Rochester. She is also the director of the Center on Disability and Education. Mock has worked alongside and on behalf of individuals with disabilities and their families as a teacher, professor and advocate for three decades. Mock is widely known for her work in the area of college options for students with intellectual and developmental disabilities (IDD). She is the chair of the Accreditation Workgroup for the National Coordinating Center at Think College, and is the co-founder of the New York Inclusive Higher Education Coalition, a group of colleges, agencies, and families interested in promoting inclusive higher education throughout New York State.</p>
 			</div>
 		  </div>
