--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="/">Home</a>
-                      <a class="nav-link" href="#board">Board & Council</a>
+                      <a class="nav-link" href="#board">Board Members</a>
                       <a class="nav-link" href="#partners">Partners</a>
 
 
