--- a/content/index.njk
+++ b/content/index.njk
@@ -8,18 +8,18 @@ eleventyNavigation:
 <section id="intro" class="alt_bg">
 	<div class="container">
 
-<h2>About the Council</h2>
-<p>The former 2015-2021 National Coordinating Center (NCC) Accreditation Workgroup determined that no current accrediting agency exists that could meet all our needs. In 2021 the NCC Accreditation Workgroup called for the development of an independent agency to provide accreditation. Therefore, the 2021-2025 NCC Accreditation Workgroup and Think College leaders worked to build the infrastructure and operationalize the framework for this Council. The Council will specialize in the accreditation of programs for students with intellectual disability and plans to apply for national recognition of the new agency by 2025.</p>
+<h2>Quality Programs are Vital to Student Success </h2>
+<p>Program accreditation provides an opportunity to demonstrate quality assurance and programming. Accreditation also provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing quality programs for students with intellectual disability (ID). In addition, programs are able to show how they support student success through completion and graduation rates.</p>
 <hr>
 <div class="row">
 	
 	<div class="col-lg-8">
-<h3>Accreditation of programs is important</h3>
+<h3>Program Accreditation Standards </h3>
 
-<p>Accreditation offers a way to indicate that a program is meeting basic quality standards in a number of key areas. Accreditation of programs creates quality benchmarks for programs that are useful to the institutions and to students and parents. It provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing high-quality programs. </p>
+<p>The Program Accreditation Standards are designed to help programs ensure that they meet quality assurance standards in the field of inclusive higher education. The standards address key areas of college and university programming related to student outcomes and individualized supports. Programs that become accredited demonstrate a level of quality programming for students with ID. Learn more about the <a href="https://thinkcollege.net/sites/default/files/files/TCreport_accred_modelstandards_2021.pdf"> standards and how your program can begin preparing for accreditation.</a>  </p>
 <hr>
-<h3>About Program Accreditation Standards</h3>
-The Program Accreditation Standards address key areas of quality programs including Student Achievement, Curriculum, and Student Services. <a href="https://thinkcollege.net/sites/default/files/files/TCreport_accred_modelstandards_2021.pdf">You can read more about the Program Standards at ThinkCollege.net</a>.
+<h3>About the Council </h3>
+<p>The Inclusive Higher Education Accreditation Council (IHEAC) is an independent accrediting agency for college and university programs who serve students with intellectual disability (ID). The purpose of the IHEAC is to promote standards-based quality programming for students with ID who attend colleges and universities. The agency is approved as a <a href="/img/501c3.pdf">tax-exempt organization</a> under Section 501(c)(3) of the U.S. Internal Revenue Code.</p>
 
 	</div>
 	<div class="col-lg-4"> <div class="card call_out"><div class="card-body">
@@ -72,7 +72,7 @@ The Program Accreditation Standards address key areas of quality programs includ
 
 <section id="board">
 	<div class="container">
-	<h2>Council and Board Members </h2>
+	<h2>Board Members </h2>
 	<div class="row row-cols-1 row-cols-md-2 g-4">
 	  <div class="col pb-3">
 		<div class="card h-100  ">
