Programs and news

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
               <h3 class="h5">Contact</h3>
             
                 <p>Martha Mock, PhD and Executive Director <br>
-                <a href="mailto:martha.mock@iheacouncil.org">Email martha.mock@iheacouncil.org</a><br>
+                <a href="mailto:iheac@iheacouncil.org">Email iheac@iheacouncil.org</a><br>
                 <a href="tel:(585) 276 - 3363">(585)276-3363</a></p>
             </div>
           </div>
