--- a/content/index.njk
+++ b/content/index.njk
@@ -67,7 +67,44 @@ eleventyNavigation:
 	</div>
 </section>
 
+<section id="news">
+	<div class="container">
+		<h2>IHEAC in the News</h2>
+<hr>
+		<article>
+			<h3 class="h5"><a href="/news/first/">Western Carolina University University Participant Program First Postsecondary Program for Students with Intellectual Disability to be Accredited by New Agency</a></h3>
+			<p><small>May 10, 2023</small></p>
+			<p>Boston, MA — May 10, 2023 — The Institute for Community Inclusion's (ICI) Think College and the Inclusive Higher Education Accreditation Council (IHEAC), a new accrediting agency for postsecondary programs for students with intellectual disability…</p>
+		</article>
+	<hr>
+		<article>
+			<h3 class="h5"><a href="/news/launch/">ICI's Think College Launches Accreditation Agency for Inclusive Higher Education</a></h3>
+			<p><small>April 5, 2023</small></p>
+			<p>Boston, Ma. — Think College, a center within the Institute for Community Inclusion (ICI) at the University of Massachusetts Boston, announced today the launch of the Inclusive Higher Education Accreditation Council (IHEAC), a new accrediting agency…</p>
+		</article>
+	<hr>
+		<article>
+			<h3 class="h5"><a href="https://www.insidehighered.com/news/2023/03/27/accreditor-emerging-intellectual-disabilities-programs">Ensuring Quality Programs for Students With Intellectual Disabilities</a></h3>
+			<p><small>March 26, 2023</small></p>
+			<p>An emerging accreditor aims to set standards for evaluating the growing number of programs for students long underserved in higher education.</p>
+		</article>
 
+
+	</div>
+</section>
+
+<section id="programs">
+	<div class="container">
+	<h2>Accredited Programs</h2>
+	<div class="card h-100 py-2">
+		<div class="card-body">
+		  <img src="/img/WCU-Logo-png.png" class="float-start p-3" alt="Western Carolina University">
+		  <div class="text-center">
+		  <h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3>
+		</div>
+	  </div>
+	</div>
+</section>
 
 
 <section id="board">
